replace deprecated new Long() with Long.valueOf()